test: 숙소 리스트 조회 서비스 로직 개발 [AIR-51]