@@ -9,6 +9,7 @@ import com.gurudev.aircnc.domain.member.entity.Member;
 import com.gurudev.aircnc.domain.member.service.MemberService;
 import com.gurudev.aircnc.domain.room.entity.Room;
 import com.gurudev.aircnc.domain.room.entity.RoomPhoto;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,25 +27,43 @@ class RoomServiceImplTest {
   @Autowired
   private RoomService roomService;
 
-  private Room room;
+  private Member host;
+  private Room room1;
+  private Room room2;
+
   private List<RoomPhoto> roomPhotos;
 
   @BeforeEach
   void setUp() {
-      Member host = createHost();
-      memberService.register(host);
+    host = createHost();
+    memberService.register(host);
 
-      room = createRoom(host);
-      roomPhotos = List.of(createRoomPhoto(), createRoomPhoto());
+    room1 = createRoom(host);
+    room2 = createRoom(host);
+
+    roomPhotos = List.of(createRoomPhoto(), createRoomPhoto());
+
+    roomService.register(room1, roomPhotos);
+    roomService.register(room2, Collections.emptyList());
   }
 
   @Test
   void 숙소_등록_성공() {
+    Room room = createRoom(host);
+
     Room registeredRoom = roomService.register(room, roomPhotos);
 
     assertThat(registeredRoom.getId()).isNotNull();
-    assertThat(registeredRoom.getHost()).isEqualTo(room.getHost());
+    assertThat(registeredRoom.getHost()).isEqualTo(room1.getHost());
     assertThat(registeredRoom.getRoomPhotos())
         .containsExactly(createRoomPhoto(), createRoomPhoto());
+  }
+
+  @Test
+  void 숙소_리스트_조회_성공() {
+    List<Room> rooms = roomService.getAll();
+
+    assertThat(rooms).hasSize(2)
+        .containsExactly(room1, room2);
   }
 }
